SalesforceMetaData/metadata/objects/bofc__BOFCUserProfPerSet__c.object
<CustomObject>
    <fields>
        <fullName>bofc__PROFILE_ID__c</fullName>
        <label>PROFILE ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Profile_Name__c</fullName>
        <label>Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__UserPermSets__c</fullName>
        <label>UserPermSets</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>BOFCUserProfPerSet</label>
    <nameField>
        <label>BOFCUserProfPerSet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BOFCUserProfPerSet</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>